--- a/static/main.css
+++ b/static/main.css
@@ -5,17 +5,23 @@
     
 body {
     font-family: "Lato", Helvetica, sans-serif;
-    background: #333;
-    color: #efefef;
+    background: #efefef;
+    color: #1f1f1f;
     line-height: 1.6;
     height: 100vh;
+    overflow: hidden;
 }
 
 .container {
     width: 100%;
     height: 100%;
+    /* Smooth Scrool */
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
 }
 /* Navbar  */
+
 .navbar {
     position: fixed;
     top: 0;
@@ -50,6 +56,7 @@ body {
 }
 
 /* Different sections */
+
 section {
     display: flex;
     flex-direction: column;
@@ -58,6 +65,8 @@ section {
     text-align: center;
     width: 100%;
     height: 100vh;
+    /* smooth scroll */
+    scroll-snap-align: center;
 }
 
 section h1 {
@@ -90,16 +99,16 @@ section p {
     grid-template-columns: repeat(3, 1fr);
     text-align: center;
     justify-items: center;
-    /* text-decoration: none; */
+    text-decoration: none;
 }
 
 .subtitle {
-    text-decoration: none;
+   text-decoration: none;
 }
 a {
     text-decoration: none;
-    color: #efefef   !important;
-}
+    color: #efefef   !important; 
+} 
 
 /* Projects */
 
@@ -115,4 +124,25 @@ a {
     display: none;
 }
 
+/* Background images for section */
 
+section#home {
+    background: url(https://images.unsplash.com/photo-1595876290257-da90d70ef5d8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80) no-repeat center center/cover;
+}
+
+section#projects {
+    background: url(https://images.unsplash.com/photo-1507400492013-162706c8c05e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Nnx8bmlnaHR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60) no-repeat center/cover;
+
+}
+section#blogs {
+    background: url(https://images.unsplash.com/photo-1502581827181-9cf3c3ee0106?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjR8fG5pZ2h0fGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60) no-repeat center/cover;
+
+}
+section#about {
+    background: url(https://images.unsplash.com/photo-1507400492013-162706c8c05e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Nnx8bmlnaHR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60) no-repeat center/cover;
+
+}
+section#contact {
+    background: url(https://images.unsplash.com/photo-1507400492013-162706c8c05e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Nnx8bmlnaHR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60) no-repeat center/cover;
+
+}
