--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             
             <nav class="navbar">
                 <ul>
-                    <li><a href="/">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#blogs">Blogs</a></li>
                     <li><a href="#about">About</a></li>
