--- a/static/main.css
+++ b/static/main.css
@@ -6,11 +6,16 @@
 body {
     font-family: "Lato", Helvetica, sans-serif;
     background: #efefef;
-    color: #1f1f1f;
+    /* color: #1f1f1f; */
     line-height: 1.6;
     height: 100vh;
     overflow: hidden;
 }
+
+a {
+    text-decoration: none;
+    color: transparent; 
+} 
 
 .container {
     width: 100%;
@@ -43,7 +48,7 @@ body {
 
 .navbar ul li {
     margin: 0 1rem;
-    padding: 1rem;
+    padding: 1em;
     font-size: 1.5rem;
     
 }
@@ -70,7 +75,7 @@ section {
     height: 100vh;
     /* smooth scroll */
     scroll-snap-align: center;
-}
+} 
 
 section h1 {
     font-size: 4rem;
@@ -78,74 +83,156 @@ section h1 {
 
 section p {
     font-size: 1.5rem;
-}
+} 
 
-/* Project Section */
-
-#projects {
+/*  Home section */
+#home {
     display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 15rem 230px 1fr;
+    overflow: hidden;
+    grid-template-columns: repeat(3,1fr);
 }
 
-#projects h1 {
+#home h1 {
     margin: 0;
     grid-row: 1;
     grid-column: 1/-1;
 }
 
-#projects .content-wrapper {
+/* #home .home-background {
+    width: 50%;
+    height: 50%;
+    grid-column: span 3;
     grid-row: 2;
-    grid-column: 1/-1;
+    justify-content: center;
+    background-size: cover;
+    align-items: center;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 75px;
+} */
+
+/* .home-background img {
+    grid-row: 2;
+    position: relative;
+    justify-content: center;
+    background-size: cover;
+    
+} */
+
+#home p {
+    grid-row: 3;
+
+}
+
+
+/* Project Section */
+
+#projects {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    text-align: center;
-    justify-items: center;
-    text-decoration: none;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 15rem 1fr 1fr;
+    justify-content: end;
 }
 
-.subtitle {
-<<<<<<< HEAD
-   text-decoration: none;
+#projects h1 {
+    margin: 0;
+    padding-top: 2rem;
+    padding-bottom: 0;
+    grid-row: 1;
+    grid-column: 1/-1;
 }
-a {
-    text-decoration: none;
-    color: #efefef   !important; 
-=======
-   /* text-decoration: none; */
+
+#projects p {
+    color: #efefef transparent;
 }
-a {
-    text-decoration: none;
-    color: #1d1d1d   !important; 
->>>>>>> master
-} 
 
-/* Projects */
 
-.portfolio-item-wrapper {
-    height: 20rem;
-    width: 33vw;
+/* changes */
+#projects .portfolio-items-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(auto-fill);
+    grid-template-areas: 
+        "left center right"
+        "left center right"
+}
+
+.portfolio-item-wrapper{
+    position: relative;
+}
+
+/* .portfolio-img-background {
+    height: 350px;
+    width: 100%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+} */
+
+#projects .img-text-wrapper {
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    height: 100%;
+    text-align: center;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+/* 
+.logo-wrapper img{
+    width:50%;
+    margin-bottom: 20px;
+} */
+
+.img-text-wrapper .subtitle {
+    transition: 0.5s;
+    color: white transparent;
+    font-weight: 600;
 }
 
-.img-text-wrapper {
-    display: none;
+.img-text-wrapper p:hover {
+    font-weight: 600;
+    color: lightseagreen !important;
 }
 
-<<<<<<< HEAD
-/* Background images for section */
+.img-darken {
+    transition: 0.5s;
+    filter: brightness(10%);
+}
+/* end change */
+/* #projects .content-wrapper {
+    grid-row: 2;
+    grid-column: 1/-1;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    text-align: center;
+    justify-items: center;
+    text-decoration: none;
+    } */
 
-section#home {
-=======
-/* Blog Section */
+
+
+.portfolio-item-wrapper {
+    height: 20rem;
+    width: 33.3vw;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* border: #e6e6e6 solid; */
+    padding: 5px;
+}
+
+
+/* Blogs Section */
+
 #blogs {
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 15rem 1fr 1fr;
+    grid-template-rows: 15rem 230px 1fr;
 }
 
 #blogs h1 {
@@ -154,30 +241,37 @@ section#home {
     grid-column: 1/-1;
 }
 
-/* Background images for section */
-
-/* section#home {
->>>>>>> master
-    background: url(https://images.unsplash.com/photo-1595876290257-da90d70ef5d8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80) no-repeat center center/cover;
+#blogs p {
+    border: #e6e6e6 solid;
+    padding: 5px;
 }
 
-section#projects {
-    background: url(https://images.unsplash.com/photo-1507400492013-162706c8c05e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Nnx8bmlnaHR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60) no-repeat center/cover;
 
-}
-section#blogs {
-    background: url(https://images.unsplash.com/photo-1502581827181-9cf3c3ee0106?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjR8fG5pZ2h0fGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60) no-repeat center/cover;
+/* About Section */
 
+#about {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
-section#about {
-    background: url(https://images.unsplash.com/photo-1507400492013-162706c8c05e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Nnx8bmlnaHR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60) no-repeat center/cover;
 
+#about h1{
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 10px;
 }
-section#contact {
-    background: url(https://images.unsplash.com/photo-1507400492013-162706c8c05e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Nnx8bmlnaHR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60) no-repeat center/cover;
+#about p{
+    display: grid;
+    grid-template-columns:1fr;
+    padding: 10px;
+}
 
-<<<<<<< HEAD
+#about img {
+    width: 75%;
+    align-items: center;
+    justify-content: center;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 75px;
 }
-=======
-} */
->>>>>>> master
+
