--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                         <a href="https://github.com/dorjeys3/Walmart_proj" target="_blank"><div class="portfolio-item-wrapper" style="background-image:url(https://i.pinimg.com/originals/b0/45/af/b045af8a94343e3b1fdbf1576e9818b8.gif)">
                             <div class="img-text-wrapper">                           
                                 <p class="subtitle">
-                                    Using Natural Language Processing, Machine Learning models were able to predict which items would be recommened items based on customers' reviews.
+                                    Using NLP, Machine Learning models were able to predict which Walmart items would be recommened items based on customers' reviews.
                                 </p>
                             </div>
                         </div></a>
@@ -56,7 +56,7 @@
                                 </div>
 
                                 <p class="subtitle">
-                                    Used Natural Language Tool Kit, we anazlyzed all of 2020 Apple events (3 major events) via Twitter using Twint.
+                                    Anazlyzed sentiments of 3 major Apple events in 2020 using Twint.
                                 </p>
                             </div>
                         </div></a>
@@ -118,14 +118,14 @@
             <section id="blogs">
                 <h1>These are my blogs</h1>
                 <div class="blog-content">    
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                     
                 </div>
             </section>
@@ -158,11 +158,6 @@
                     portfolioItem.childNodes[1].classList.remove('img-darken');
                 })
         })
-                // portfolioItems.addEventListener('mouseover', (e)=>{
-                //     if (e.target.classname == "portfolio-item-wrapper"){
-                //         console.log(e.target)
-                //     }
-                // })
 
     </script>
 </html>
